fixed header didnt work either repaint cost too high

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -731,7 +731,7 @@ input[type="submit"]:hover {
 @media screen and (max-width: 820px) {
     header {
         /* background: linear-gradient(to top, #fffb00 40%, #fd57bf ); */
-        background: url("../images/bg4-2.jpg") no-repeat center fixed;
+        background: url("../images/bg4-2.jpg") no-repeat center;
         background-size: cover; 
         -webkit-background-size: cover;
         -moz-background-size: cover;
